[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.19"
resp = { version = "0.1.0", path = "../resp" }
tokio = { version = "1.31.0", features = ["full"] }
