[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
eyre = "0.6.8"
log = "0.4.20"
resp = { version = "0.1.0", path = "../resp" }
tempfile = "3.7.1"
thiserror = "1.0.44"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
