[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raft-server"
path = "src/bin/server.rs"

[[bin]]
name = "raft-client"
path = "src/bin/client.rs"

[dependencies]
async-trait = "0.1.73"
log = "0.4.20"
prost = "0.11.9"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9"
