[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
log = "0.4.20"
prost = "0.11.9"
rand = "0.8.5"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9"
