[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.73"
env_logger = "0.10.0"
eyre = "0.6.8"
futures = "0.3.28"
log = "0.4.20"
prost = "0.11.9"
rand = "0.8.5"
test-log = "0.2.12"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[[bin]]
name = "tcp"
path = "src/bin/tcp.rs"
