[package]
name = "resp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bstr = "1.6.0"
futures = "0.3.28"
log = "0.4.20"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["full"] }
tokio-test = "0.4.2"
